k8s/example/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-h
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: None
